unpackaged/main/default/objects/zkmulti__EEIForm__c/zkmulti__EEIForm__c.object-meta.xml
<CustomObject>
    <description>EEI Form is a collection of data defined for generating a Electronic Export Information</description>
    <label>EEI Form</label>
    <nameField>
        <displayFormat>EEI-{0000}</displayFormat>
        <label>EEI Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EEI Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>