unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__EEIFillingType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EEIFillingType__c</fullName>
    <label>EEI Filling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipper filed</fullName>
            </value>
            <value>
                <fullName>UPS filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>