unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__EEIShipper__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EEIShipper__c</fullName>
    <description>Indicates the EEI Shipper sub option</description>
    <inlineHelpText>Indicates the EEI Shipper sub option</inlineHelpText>
    <label>EEI Shipper</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>zkmulti__EEIFillingType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Requires the ITN</fullName>
            </value>
            <value>
                <fullName>Requires the Exemption Legend</fullName>
            </value>
            <value>
                <fullName>Requires the post departure filing citation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>