unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__EEIUPSFiledPOA__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EEIUPSFiledPOA__c</fullName>
    <label>EEI UPS Filed POA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Time POA</fullName>
            </value>
            <value>
                <fullName>Blanket POA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>