unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__ExemptionLegend__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ExemptionLegend__c</fullName>
    <label>Exemption Legend</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>zkmulti__EEIFillingType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>30.2(d)(2)</fullName>
            </value>
            <value>
                <fullName>30.26(a)</fullName>
            </value>
            <value>
                <fullName>30.36</fullName>
            </value>
            <value>
                <fullName>30.37(a)</fullName>
            </value>
            <value>
                <fullName>30.37(b)</fullName>
            </value>
            <value>
                <fullName>30.37(c)</fullName>
            </value>
            <value>
                <fullName>30.37(d)</fullName>
            </value>
            <value>
                <fullName>30.37(f)</fullName>
            </value>
            <value>
                <fullName>30.37(h)</fullName>
            </value>
            <value>
                <fullName>30.37(i)</fullName>
            </value>
            <value>
                <fullName>30.37(j)</fullName>
            </value>
            <value>
                <fullName>30.37(k)</fullName>
            </value>
            <value>
                <fullName>30.37(l)</fullName>
            </value>
            <value>
                <fullName>30.37(m)</fullName>
            </value>
            <value>
                <fullName>30.37(n)</fullName>
            </value>
            <value>
                <fullName>30.37(o)</fullName>
            </value>
            <value>
                <fullName>30.37(p)</fullName>
            </value>
            <value>
                <fullName>30.37(q)</fullName>
            </value>
            <value>
                <fullName>30.37(r)</fullName>
            </value>
            <value>
                <fullName>30.37(s)</fullName>
            </value>
            <value>
                <fullName>30.37(t)</fullName>
            </value>
            <value>
                <fullName>30.37(u)</fullName>
            </value>
            <value>
                <fullName>30.37(x)</fullName>
            </value>
            <value>
                <fullName>30.37(y)(1)</fullName>
            </value>
            <value>
                <fullName>30.37(y)(2)</fullName>
            </value>
            <value>
                <fullName>30.37(y)(3)</fullName>
            </value>
            <value>
                <fullName>30.37(y)(4)</fullName>
            </value>
            <value>
                <fullName>30.37(y)(5)</fullName>
            </value>
            <value>
                <fullName>30.37(y)(6)</fullName>
            </value>
            <value>
                <fullName>30.39</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>