unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__ForwardingAgentEinIrsNo__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ForwardingAgentEinIrsNo__c</fullName>
    <label>Forwarding Agent&#39;s EIN (IRS) NO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>