unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__InBondCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__InBondCode__c</fullName>
    <description>70: Not in bond
36: Warehouse withdrawal for IE
37: Warehouse withdrawal for T and E
62: T and E
63: IE
67: IE from a FTZ
68: T and E from a FTZ</description>
    <inlineHelpText>70: Not in bond
36: Warehouse withdrawal for IE
37: Warehouse withdrawal for T and E
62: T and E
63: IE
67: IE from a FTZ
68: T and E from a FTZ</inlineHelpText>
    <label>In Bond Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>63</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>