unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__LicenseDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LicenseDate__c</fullName>
    <label>License Date</label>
    <type>Date</type>
</CustomField>