unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__ModeOfTransport__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ModeOfTransport__c</fullName>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Air Containerized</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Fixed Transport Installations</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Passenger Handcarried</fullName>
            </value>
            <value>
                <fullName>Pedestrian</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Rail Containerized</fullName>
            </value>
            <value>
                <fullName>Road Other</fullName>
            </value>
            <value>
                <fullName>Sea Barge</fullName>
            </value>
            <value>
                <fullName>Sea Containerized</fullName>
            </value>
            <value>
                <fullName>Sea Non-containerized</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Truck Containerized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>