unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__ShipperTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ShipperTaxId__c</fullName>
    <description>The Company Tax ID of the Shipper.</description>
    <inlineHelpText>The Company Tax ID of the Shipper.</inlineHelpText>
    <label>Shipper Tax ID</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>