unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__SignificantMilitaryEquipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SignificantMilitaryEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Significant Military Equipment</label>
    <type>Checkbox</type>
</CustomField>