unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__UltimateConsigneeStreet__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UltimateConsigneeStreet__c</fullName>
    <description>Up to 3 lines maximum. Each line must be no more than 35 characters long.</description>
    <inlineHelpText>Up to 3 lines maximum. Each line must be no more than 35 characters long.</inlineHelpText>
    <label>Ultimate Consignee Street</label>
    <type>TextArea</type>
</CustomField>