unpackaged/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__UltimateConsigneeType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UltimateConsigneeType__c</fullName>
    <label>Ultimate Consignee Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>zkmulti__EEIFillingType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Direct Consumer</fullName>
            </value>
            <value>
                <fullName>Government Entity</fullName>
            </value>
            <value>
                <fullName>Resellr</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>