unpackaged/main/default/objects/zkmulti__EEIForm__c/validationRules/zkmulti__filed_check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkmulti__filed_check</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(zkmulti__EEIFillingType__c)=&#39;UPS filed&#39;</errorConditionFormula>
    <errorDisplayField>zkmulti__EEIFillingType__c</errorDisplayField>
    <errorMessage>&#39;UPS filled&#39; option is not supported.</errorMessage>
</ValidationRule>