unpackaged/main/default/objects/zkmulti__EEIForm__c/validationRules/zkmulti__Shipper_filed_check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkmulti__Shipper_filed_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkmulti__EEIFillingType__c)=&#39;Shipper filed&#39;,TEXT(zkmulti__EEIShipper__c)=null)</errorConditionFormula>
    <errorDisplayField>zkmulti__EEIShipper__c</errorDisplayField>
    <errorMessage>Please choose option</errorMessage>
</ValidationRule>